--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,30 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-env_logger = "*"
 ws = "*"
 serde_json = "1.0"
+smol = "0.1.10"
+piper = "0.1.2"
+parking_lot = "0.10.2"
+once_cell = "1.4.0"
+log = "*"
+log4rs = "*"
+libc = "0.2.23"
+kernel32-sys = "0.2.2"
+winapi-old = {package = "winapi", version="0.2.8"}
+
+[dependencies.arcdps_bindings]
+version = "0.1.8"
+git = "https://github.com/greaka/arcdps_bindings"
+# path = "../arcdps_bindings"
+
+[dependencies.winapi]
+version = "0.3.7"
+features = ["ntdef", "minwindef"]
+
+[lib]
+crate-type = ["cdylib"]
+
+[profile.release]
+codegen-units = 1
+lto = true
