--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,11 @@ log = "*"
 log4rs = "*"
 libc = "0.2.23"
 kernel32-sys = "0.2.2"
+lazy_static = "1.4.0"
+bincode = "1.3.1"
+uuid = { version = "0.8", features = ["v4"] }
 winapi-old = {package = "winapi", version="0.2.8"}
+serde = { version = "1.0.114", features = ["derive"] }
 
 [dependencies.arcdps_bindings]
 version = "0.1.8"
