--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ bincode = "1.3.1"
 uuid = { version = "0.8", features = ["v4"] }
 winapi-old = {package = "winapi", version="0.2.8"}
 serde = { version = "1.0.114", features = ["derive"] }
+scrap = "*"
+image = "*"
+base64 = "*"
 
 [dependencies.arcdps_bindings]
 version = "0.1.8"
